[package]
name = "cheetah-codec"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bitflags = { version = "2", default-features = false }
bytes = { version = "1", default-features = false }
smallvec = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
