[package]
name = "cheetah-codec"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bitflags = { version = "2", default-features = false }
bytes = { version = "1", default-features = false }
cc-data = { version = "0.2.1", default-features = false, features = ["decode"] }
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher", "inline-more"] }
libm = { version = "0.2", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
smallvec = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
dhat = { workspace = true }
proptest = "1.6.0"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "dhat_alloc"
harness = false
