[package]
name = "cheetah-runtime-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
cheetah-codec = { path = "../../foundation/cheetah-codec" }
cheetah-runtime-api = { path = "../cheetah-runtime-api" }
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
