[package]
name = "cheetah-media-api"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Media-domain ports, models, events, and errors for the Cheetah streaming server."

[dependencies]
async-trait.workspace = true
bytes = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
