[package]
name = "cheetah-media-api"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Media-domain ports, models, events, and errors for the Cheetah streaming server."

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes = { workspace = true, features = ["serde"] }
cheetah-codec = { path = "../../foundation/cheetah-codec" }
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
