[package]
name = "cheetah-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["macros"]
macros = ["dep:cheetah-sdk-macros"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
cheetah-codec = { path = "../../foundation/cheetah-codec" }
cheetah-media-api = { path = "../cheetah-media-api" }
cheetah-runtime-api = { path = "../../runtime/cheetah-runtime-api" }
cheetah-sdk-macros = { path = "../cheetah-sdk-macros", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
cheetah-config = { path = "../../system/cheetah-config" }
cheetah-engine = { path = "../../system/cheetah-engine" }
cheetah-proxy-module = { path = "../../system/cheetah-proxy-module" }
cheetah-record-module = { path = "../../system/cheetah-record-module" }
cheetah-runtime-tokio = { path = "../../runtime/cheetah-runtime-tokio" }
cheetah-rtp-module = { path = "../../protocols/rtp/module" }
tokio = { workspace = true }
