[package]
name = "cheetah-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cheetah-sdk = { path = "../../sdk/cheetah-sdk" }
parking_lot.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
