[package]
name = "cheetah-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
dashmap.workspace = true
getrandom.workspace = true
hmac.workspace = true
parking_lot.workspace = true
sha2.workspace = true
subtle = "2.6"
cheetah-codec = { path = "../../foundation/cheetah-codec" }
cheetah-media-api = { path = "../../sdk/cheetah-media-api" }
cheetah-runtime-api = { path = "../../runtime/cheetah-runtime-api" }
cheetah-sdk = { path = "../../sdk/cheetah-sdk" }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
cheetah-config = { path = "../cheetah-config" }
cheetah-media-module = { path = "../cheetah-media-module" }
cheetah-runtime-tokio = { path = "../../runtime/cheetah-runtime-tokio" }
