[package]
name = "cheetah-media-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
cheetah-media-api = { path = "../../sdk/cheetah-media-api" }
cheetah-runtime-api = { path = "../../runtime/cheetah-runtime-api" }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
cheetah-runtime-tokio = { path = "../../runtime/cheetah-runtime-tokio" }
tokio = { workspace = true }
