[package]
name = "cheetah-media-grpc-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tokio = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rcgen = "0.14.8"
