[package]
name = "cheetah-media-module"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "HTTP adapters (native and ZLMediaKit-compatible) for the Cheetah media API."

[dependencies]
async-trait.workspace = true
bytes.workspace = true
cheetah-media-api = { path = "../../sdk/cheetah-media-api" }
cheetah-sdk = { path = "../../sdk/cheetah-sdk" }
getrandom.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
subtle = "2.6"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
cheetah-config = { path = "../cheetah-config" }
cheetah-engine = { path = "../cheetah-engine" }
cheetah-proxy-module = { path = "../cheetah-proxy-module" }
cheetah-record-module = { path = "../cheetah-record-module" }
cheetah-runtime-tokio = { path = "../../runtime/cheetah-runtime-tokio" }
cheetah-rtp-module = { path = "../../protocols/rtp/module" }
tokio = { workspace = true }
