[package]
name = "cheetah-media-processing-module"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Media processing module: image/audio/video transcoding, snapshot, and derived streams via avcodec-rs"

[features]
default = []

media-processing-audio = [
    "dep:avcodec",
    "avcodec?/g711",
    "avcodec?/opus",
    "avcodec?/fdk-aac",
    "avcodec?/audio-resample-rubato",
]
media-processing-video = [
    "dep:avcodec",
    "avcodec?/rust-h264",
    "avcodec?/rust-h265",
    "avcodec?/jpeg",
    "avcodec?/libyuv",
]
media-processing-image = [
    "dep:avcodec",
    "avcodec?/jpeg",
    "avcodec?/zune",
    "avcodec?/libyuv",
    "avcodec?/rust-h264",
    "avcodec?/rust-h265",
]

media-processing-image-overlay = [
    "dep:avcodec",
    "avcodec?/opencv",
]

avcodec-profile-native-free = ["avcodec?/profile-native-free"]
avcodec-profile-software = ["avcodec?/profile-software"]

media-processing-caption = ["cheetah-codec/cea"]

media-processing-cpu = [
    "media-processing-audio",
    "media-processing-video",
    "media-processing-image",
    "media-processing-image-overlay",
    "media-processing-caption",
    "avcodec-profile-native-free",
    "avcodec-profile-software",
]

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

avcodec = { git = "https://github.com/TimothyWalker6922/avcodec-rs-develop.git", rev = "c6a40f4428c39990f4bdb3bed0a1dcfea0838e3f", version = "0.2.0", default-features = false, optional = true }

cheetah-codec = { path = "../../foundation/cheetah-codec" }
cheetah-media-api = { path = "../../sdk/cheetah-media-api" }
cheetah-runtime-api = { path = "../../runtime/cheetah-runtime-api" }
cheetah-sdk = { path = "../../sdk/cheetah-sdk" }

[dev-dependencies]
cheetah-config = { path = "../cheetah-config" }
cheetah-engine = { path = "../cheetah-engine" }
cheetah-runtime-tokio = { path = "../../runtime/cheetah-runtime-tokio" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
