[package]
name = "cheetah-proxy-module"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Enable real connector-backed data planes. Server profiles that enable the
# corresponding protocol modules should also enable these features.
rtmp = ["dep:cheetah-connector", "cheetah-connector/rtmp"]
http-flv = ["dep:cheetah-connector", "cheetah-connector/http-flv"]
rtsp = ["dep:cheetah-connector", "cheetah-connector/rtsp"]
webrtc = ["dep:cheetah-connector", "cheetah-connector/webrtc"]
# Convenience: enable the primary production proxy paths.
full = ["rtmp", "http-flv", "rtsp"]

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

cheetah-codec = { path = "../../foundation/cheetah-codec" }
cheetah-media-api = { path = "../../sdk/cheetah-media-api" }
cheetah-runtime-api = { path = "../../runtime/cheetah-runtime-api" }
cheetah-sdk = { path = "../../sdk/cheetah-sdk" }

# Optional real connector data-plane integration.
cheetah-connector = { path = "../../sdk/cheetah-connector", optional = true, default-features = false }

[dev-dependencies]
bytes = { workspace = true }
cheetah-config = { path = "../cheetah-config" }
cheetah-engine = { path = "../cheetah-engine" }
cheetah-rtmp-module = { path = "../../protocols/rtmp/module" }
cheetah-runtime-tokio = { path = "../../runtime/cheetah-runtime-tokio" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
