[package]
name = "cheetah-record-module"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
cheetah-codec = { path = "../../foundation/cheetah-codec" }
cheetah-media-api = { path = "../../sdk/cheetah-media-api" }
cheetah-sdk = { path = "../../sdk/cheetah-sdk" }
cheetah-runtime-api = { path = "../../runtime/cheetah-runtime-api" }
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
