[package]
name = "cheetah-webhook-dispatcher"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Outbound webhook dispatcher for MediaEvent with ZLM-compatible translation, timeout, retry, and circuit breaker."

[dependencies]
async-trait.workspace = true
base64.workspace = true
cheetah-codec = { path = "../../foundation/cheetah-codec" }
cheetah-media-api = { path = "../../sdk/cheetah-media-api" }
cheetah-runtime-api = { path = "../../runtime/cheetah-runtime-api" }
cheetah-sdk = { path = "../../sdk/cheetah-sdk" }
futures.workspace = true
hmac.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
cheetah-runtime-tokio = { path = "../../runtime/cheetah-runtime-tokio" }
tokio = { workspace = true }
