[package]
name = "cheetah-fmp4-module"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
cheetah-codec = { path = "../../../foundation/cheetah-codec" }
cheetah-fmp4-core = { path = "../core" }
cheetah-fmp4-driver-tokio = { path = "../driver-tokio" }
cheetah-runtime-api = { path = "../../../runtime/cheetah-runtime-api" }
cheetah-sdk = { path = "../../../sdk/cheetah-sdk" }
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
cheetah-runtime-tokio = { path = "../../../runtime/cheetah-runtime-tokio" }
tokio.workspace = true
